# COE322

./: README.md  Sadam Homework 1.docx  Works Cited_625a8164-414c-4b10-8fef-ba361f7fe1ef.docx  test.docx
Homework1/: Homework 1.docx
Homework2/: Homework2.txt
Project/src/: CMakeLists.txt  tsp.cpp
Project/writeup_visualization/: visualization.py
hw1/: Homework 1.docx
hw10/Exercise1/src/: CMakeLists.txt  tdd.cpp  tdd.hpp  tddTest.cpp
hw10/Exercise2_7/src/: CMakeLists.txt  zeroclasslib.cpp  zeroclasslib.hpp  zeroclasstest.cpp~
hw10/src/: zeroclasstest.cpp
hw11/Exercise4/src/: CMakeLists.txt  namedVector.cpp  namedVector.cpp~
hw11/Exercise5/src/: CMakeLists.txt  geoVector.cpp
hw12/src/: CMakeLists.txt  perfectRanges.cpp
hw3/Exercise3_Collatz/: collatz.cpp  collatz.cpp~  collatzOutput
hw3/Exercise6_OddEvenVector/: vectorOddEven.cpp  vectorOddEven.cpp~  vectorOutput
hw4/: goldbach.cpp  primegen.cpp  primegenerator.cpp
hw5/: goldbach.cpp
hw5/src/: CMakeLists.txt  goldCorollary.cpp
hw5_redo/src/: CMakeLists.txt  redoGoldCorollary.cpp
hw6/Exercise4/: loopNewton.cpp  loopOut
hw6/Exercise4/src/: CMakeLists.txt  loopNewton.cpp
hw6/Exercise5/: objectiveNewton.cpp
hw6/Exercise5/src/: CMakeLists.txt  objectiveNewton.cpp
hw7/src/: CMakeLists.txt  formatNumbers.cpp  formatNumbers.cpp~
hw8/Exercise4/src/: CMakeLists.txt  dynrectangle.cpp
hw8/src/: CMakeLists.txt  DynRect.cpp
hw9/: linkedlist.cpp  linkshared_partial.cpp
hw9/src/: CMakeLists.txt  linkfunct.cpp  linkmain.cpp  linkshared.hpp  main.c  main.cpp
